--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li class="navigation__item"><a class="navigation__link" href="./portfolio.html ">Портфолио</a></li>
             <li class="navigation__item"><a class="navigation__link" href=" ">Контакты</a></li>
         </ul>
-        <button type="button" class="menu-open-button js-open-menu">
+        <button type="button" class="menu-open-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
         <svg class="mobile-menu-icon js-open-menu">
             <use href="./images/icons.svg#icon-menu"></use>
         </svg>
@@ -465,6 +465,9 @@
        </ul>
 
     </div>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
 </body>
