Changed mobile menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,9 @@
                 <li class="card-grid__item"> 
                     <article class="card">
                         <div class="product-thumb">
+                            
                     <img alt="technokryak" class="card-grid__picture"
-                    srcset="./images/project1.jpg 1x, ./images/project1@2x.jpg 2x"  src="./images/project1.jpg">
+                    srcset="./images/project1_370px.jpg 1x, ./images/project1@2x.jpg 2x"  src="./images/project1.jpg">
                     <div class="card-overlay">
                         <p class="card-overlay__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
