--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
             <use href="./images/icons.svg#icon-close_40px"> </use>
         </svg> </button>
         <ul class="list menu-container__list">
-        <li class="menu-container__item"><a class="menu-container__link" href="/index.html"> Студия </a></li>
-        <li class="menu-container__item"><a class="menu-container__link" href="/portfolio.html"> Портфолио </a> </li>
+        <li class="menu-container__item"><a class="menu-container__link" href="./index.html"> Студия </a></li>
+        <li class="menu-container__item"><a class="menu-container__link" href="./portfolio.html"> Портфолио </a> </li>
         <li class="menu-container__item"><a class="menu-container__link" href=""> Контакты </a> </li>
         </ul>
         <a class="menu-container__tell menu-container__link" href="tel:+380961111111"> +380961111111 </a>
