--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                         <div class="product-thumb">
                             
                     <img alt="technokryak" class="card-grid__picture"
-                    srcset="./images/project1_370px.jpg 1x, ./images/project1_370px@2x.jpg 2x"  src="./images/project1_370px.jpg">
+                    srcset="./images/project1_370px.jpg 1x, ./images/project1_@2x_370px.jpg 2x"  src="./images/project1_370px.jpg">
                     <div class="card-overlay">
                         <p class="card-overlay__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
